Wed Nov  4 15:45:59 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* class.c: fix documentation for rb_define_class{_id}_under.
	  [fix GH-991][ci skip] Patch by @kachick

Wed Nov  4 15:40:45 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* method.h: fix typo. Patch by @davydovanton
	  [fix GH-1076][ci skip]

Wed Nov  4 15:39:32 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* hash.c: use correct grammer. Patch by @tveastman
	  [fix GH-1079][ci skip]

Wed Nov  4 11:38:23 2015  Jake Worth  <jakeworth82@gmail.com>

	* process.c (proc_getsid): [DOC] Fix double word 'for' and typo.
	  [Fix GH-1080]

Wed Nov  4 06:01:52 2015  Eric Wong  <e@80x24.org>

	* include/ruby/ruby.h (struct RObject): hide iv_index_tbl type
	  [ruby-core:71306] [Feature #11647]

Tue Nov  3 06:48:58 2015  Eric Wong  <e@80x24.org>

	* variable.c (find_class_path): remove cast for rb_class_ivar_set
	  (rb_ivar_set): ditto
	  (rb_cvar_set): ditto

Tue Nov  3 06:18:21 2015  Eric Wong  <e@80x24.org>

	* variable.c (rb_global_tbl): convert to id_table

Sun Nov  1 17:14:36 2015  Koichi Sasada  <ko1@atdot.net>

	* id_table.c (mix_id_table_insert): do not touch list during
	  list->hash transition because GC can run during transition.

Sun Nov  1 11:07:31 2015  Eric Wong  <e@80x24.org>

	* iseq.c (iseq_memsize): account for rb_call_cache entries

Sun Nov  1 09:12:10 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): ':' separated by a comment and a newline
	  is not valid as symbol.

Sat Oct 31 20:15:48 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/openssl/test_pair.rb: skipped tests if openssl doesn't support
	  ECDH cipher.

Sat Oct 31 14:58:10 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* man/ruby.1 (SYNOPSIS): remove extraneous space for -F option as
	  it does not allow spaces before its argument.
	  [ruby-core:71283] [Bug #11641]

Sat Oct 31 14:58:01 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* man/ruby.1 (SYNOPSIS): remove extraneous space for -F option as