@@ -1,3 +1,8 @@
+Wed Nov  4 17:33:24 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
+
+	* lib/debug.rb: Add documentation for #thread_list_all.
+	  [Misc #11580][ci skip]
+
 Wed Nov  4 15:45:59 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* class.c: fix documentation for rb_define_class{_id}_under.
